prevent the safari fix from causing overflow scroll bars

--- a/assets/sass/_sitenav.scss
+++ b/assets/sass/_sitenav.scss
@@ -171,7 +171,8 @@
     text-transform: none;
     width: 100%;
     text-align: justify;
-    overflow-x: hidden;
+    overflow-x: hidden;    
+    overflow-y: hidden;
     text-overflow: clip;
     height: 3.5rem;
     letter-spacing: -0.061em;
